--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+a {
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: rgb(78, 189, 93);
+}
+figcaption {
+  font-size: 15px;
+  text-align: center;
+}
+#featured-property p {
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+  text-align: center;
+}
+#details div {
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
